<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RTList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="iron_man">Iron Man</string>
    <string name="search_movies">Search movies...</string>
    
    <string name="movie_poster">Movie Poster</string>
    <string name="date">date</string>
    <string name="title">title</string>
    <string name="rating">rating</string>
    <string name="review">review</string>
    
    <string name="search_logo">search logo</string>
    
    <string name="rect_image">he grey background of the rating bar</string>
    <string name="rating_bar_negative">The negative color of the rating bar</string>
    <string name="rating_bar">he overlay equal to the amount of rating the movie had</string>
    

</resources>
