<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/movie_poster"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:layout_alignTop="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/title"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_toRightOf="@id/icon"
        android:layout_below="@+id/title"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/date"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:gravity="center_vertical"
        android:layout_below="@+id/date" 
        android:text="@string/rating"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/review"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_toRightOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/review"
        android:textSize="16sp" />
    
    <RelativeLayout
        android:layout_height="16dp" 
		android:layout_width="204dp"
    	android:layout_below="@+id/review"
    	android:layout_toRightOf="@id/icon"
    	>
    	
        <ImageView 
			android:id="@+id/rectimage" 
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
			android:background="@android:color/darker_gray"
			android:contentDescription="@string/rect_image">
		</ImageView>
		
        <ImageView 
			android:id="@+id/ratingBarNegative"
			android:layout_marginTop="2dp"
			android:layout_marginLeft="2dp"
			android:layout_height="12dp" 
			android:layout_width="200dp"
			android:layout_alignLeft="@+id/rectimage"
			android:background="@android:color/black"
			android:contentDescription="@string/rating_bar_negative">
		</ImageView>
		
        <ImageView 
			android:id="@+id/ratingBar"
			android:layout_marginTop="2dp"
			android:layout_marginLeft="2dp"
			android:layout_height="12dp" 
			android:layout_width="0dp"
			android:layout_alignLeft="@+id/rectimage"
			android:contentDescription="@string/rating_bar">
		</ImageView>
        
    </RelativeLayout>

</RelativeLayout> 