<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
     
    <!-- Edittext for Search -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
    	>
    	
        <ImageView 
			android:id="@+id/searchBorder" 
    		android:layout_width="fill_parent"
        	android:layout_height="30dp"
			android:background="@android:color/darker_gray"
			android:contentDescription="@string/rect_image">
		</ImageView>

	    <EditText
	        android:id="@+id/inputSearch"
	        android:layout_width="fill_parent"
	        android:layout_height="30dp"
	        android:layout_margin="3dp"
	        android:paddingLeft="2dp"
	        android:hint="@string/search_movies"
	        android:inputType="text"
	        android:imeOptions="actionDone"
	        android:text="@string/iron_man"
	        android:textColorHint="@android:color/white"
	        android:textColor="@android:color/white"
	        android:background="@android:color/black"/>
	    
	    <ImageView 
			android:id="@+id/searchLogo" 
    		android:layout_width="20dp"
        	android:layout_height="20dp"
        	android:paddingRight="5dp"
        	android:layout_centerVertical="true"
        	android:layout_alignRight="@+id/inputSearch"
			android:contentDescription="@string/search_logo"
			android:src="@drawable/searchlogo">
		</ImageView>
    
    </RelativeLayout>
  
    <!-- List View -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
  
</LinearLayout>